--- a/css/app.css
+++ b/css/app.css
@@ -1,23 +1,24 @@
+*{
+  text-align: center;
+  margin: 0 auto;
+  font-family: sans-serif;
+}
+
 .container {
-  position:relative;
-/*  height:100%;
-  width: 100%;*/
- 
   margin-bottom: 50px;
   margin-top: 50px;
-  /*border: 1px solid green;*/
 }
+
+h1 {}
 
 ul {
   height:600px;
   width:600px;
-  /*border: 3px solid black;*/
   list-style: none;
-  margin: 110px auto;
-  border:5px solid black;
+  margin: 0 auto;
+  /*border:5px solid black;*/
   border-radius: 10px;
-  padding-top: 25px;
-  padding-left: 10px;
+ 
   /*background-color: rgba(100, 239, 170, 0.5);*/
 }
 
@@ -26,26 +27,25 @@ li {
   color:rgba(100, 239, 170, 0.7);
   border-radius: 7px;
   border:3px solid black;
-  /*border:1px solid red;*/
-  height:110px;
-  width:110px;
+  height: 24%;
+  width:24%;
   display: inline-block;
-  margin:7px;
+  margin:1px;
   cursor: pointer;
   font-size: 5em;
   /*the below lines make the text center in middle of li element*/
   text-align: center;
   vertical-align: middle;
-  line-height: 100px;       /* the same as your div height */
+  line-height: 100%;       /* the same as your div height */
   box-sizing: border-box;
 }
 
-/*li:hover{
-  background-color:rgba(175, 119, 234, 0.6);
+li:hover{
+  /*background-color:rgba(175, 119, 234, 0.1);*/
   border:4px solid black;
   box-sizing: border-box;
-  box-shadow: 10px 10px 5px rgba(0,0,0,0.5);   
-}*/
+  box-shadow: 10px 10px 5px rgba(0,0,0,0.5);   }
+
 
 .green {
   background-color: green;
