--- a/css/app.css
+++ b/css/app.css
@@ -9,10 +9,11 @@ body{
   margin-top: 50px;
 }
 
-h1 {border-top: 10px solid black;
+h1 {border-top: 7px solid black;
   width: 100%;
   margin-top: -30px;
-  font-size: 36px;
+  padding-top: 10px;
+  font-size: 48px;
   }
 
 ul {
@@ -30,7 +31,7 @@ li {
   background-color: rgba(214, 4, 4, 0.7);
   color:rgba(100, 239, 170, 0.7);
   border-radius: 7px;
-  border:3px solid black;
+  border:4px solid black;
   height: 17%;
   width:17%;
   display: inline-block;
@@ -47,7 +48,7 @@ li {
 
 li:hover{
   /*background-color:rgba(175, 119, 234, 0.1);*/
-  border:4px solid black;
+  border:5px solid black;
   box-sizing: border-box;
   box-shadow: 10px 10px 5px rgba(0,0,0,0.5);   }
 
