--- a/css/app.css
+++ b/css/app.css
@@ -1,8 +1,10 @@
 body{
   text-align: center;
   margin: 0 auto;
-  /*font-family: 'Montserrat';*/
-  font-family: 'Lato', sans-serif;
+  font-family: 'Montserrat';
+/*  font-family: 'Lato', sans-serif;*/
+  color: beige;
+  background-color: black;
 
 }
 
@@ -16,11 +18,12 @@ h1 {border-top: 7px solid black;
   margin-top: -30px;
   padding-top: 10px;
   font-size: 48px;
+  
   }
 
 ul {
-  height:500px;
-  width:500px;
+  height:560px;
+  width:560px;
   list-style: none;
   margin: 0 auto;
   /*border:5px solid black;*/
@@ -32,11 +35,11 @@ li {
   background-color: rgba(214, 4, 4, 0.7);
   color:rgba(100, 239, 170, 0.7);
   border-radius: 7px;
-  border:4px solid black;
-  height: 18%;
-  width:18%;
+  /*border:1px solid black;*/
+  height: 17%;
+  width:17%;
   display: inline-block;
-  margin:2px;
+  margin:4px;
   cursor: pointer;
   font-size: 5em;
   /*the below lines make the text center in middle of li element*/
@@ -49,13 +52,14 @@ li {
 
 li:hover{
   /*background-color:rgba(175, 119, 234, 0.1);*/
-  border:4px solid black;
+  /*border: 2px solid rgba(230,230,230,0.5);*/
+  border: 3px solid rgba(0,0,0,0.5);
   box-sizing: border-box;
-  box-shadow: 10px 10px 5px rgba(0,0,0,0.5);   }
+  box-shadow: 5px 5px 10px rgba(220,220,220,0.5);   }
 
 
 .green {
   background-color: green;
-  border: 3px solid black;
-  background: radial-gradient(rgba(255,255,255,0.5), rgba(41, 242, 44, 1);
+  /*border: 1px solid black;*/
+  background: radial-gradient(rgba(255,255,255,0.7), rgba(41, 242, 44, 1);
 }
