--- a/css/app.css
+++ b/css/app.css
@@ -13,28 +13,56 @@ body{
   margin-top: 50px;
 }
 
-h1 {border-top: 7px solid black;
-  width: 100%;
+h1 {border-top: 7px solid beige;
+  width: 90%;
   margin-top: -30px;
+  margin-left: 5%;
+  margin-right: 5%;
   padding-top: 10px;
   font-size: 48px;
   
   }
 
+#score{
+  border-top: 2px solid beige;
+  width:90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  margin-top: -15px;
+  margin-bottom: 30px;
+  padding-top: 25px;
+  font-size: 24px;
+}
+
 ul {
-  height:560px;
-  width:560px;
+  height:500px;
+  width:500px;
   list-style: none;
   margin: 0 auto;
-  /*border:5px solid black;*/
-  border-radius: 10px;
-  /*background-color: rgba(100, 239, 170, 0.5);*/
+  border-radius: 1px;
+}
+
+#reset {
+  border:2px solid beige;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid beige;
+  width: 90%;
+  margin-left: 5%;
+  margin-right: 5%;
+  padding-top: 5px;
+  padding-bottom: 5px;
+}
+
+#reset:hover{
+  background-color: beige;
+  color:black;
 }
 
 li {
   background-color: rgba(214, 4, 4, 0.7);
   color:rgba(100, 239, 170, 0.7);
-  border-radius: 7px;
+  border-radius: 0px;
   /*border:1px solid black;*/
   height: 17%;
   width:17%;
@@ -48,13 +76,15 @@ li {
   line-height: 100%;       /* the same as your div height */
   box-sizing: border-box;
   background: radial-gradient(rgba(255,255,255,0.5), rgba(214, 4, 4, 0.4));
+
 }
 
 li:hover{
-  /*background-color:rgba(175, 119, 234, 0.1);*/
+/*  background-color:rgba(230, 230, 230, 0.6);*/
   /*border: 2px solid rgba(230,230,230,0.5);*/
   border: 3px solid rgba(0,0,0,0.5);
   box-sizing: border-box;
+  border-radius: 3px;
   box-shadow: 5px 5px 10px rgba(220,220,220,0.5);   }
 
 
