--- a/css/app.css
+++ b/css/app.css
@@ -81,7 +81,7 @@ li {
 
 li:hover{
 /*  background-color:rgba(230, 230, 230, 0.6);*/
-  border: 3px solid rgba(255,239,213,0.7);
+  border: 1px solid rgba(255,239,213,0.7);
   /*border: 3px solid rgba(0,0,0,0.5);*/
   box-sizing: border-box;
   border-radius: 3px;
@@ -98,17 +98,26 @@ li:hover{
   border 4px dashed beige;
   height:  700px;
   width: 700px;
-  
+
   z-index: 100;
 }*/
 
 @media only screen and (max-width: 640px) {
   
-  #score {
-    font-size: 10px;
+  h1{
+    font-size: 36px;
   }
+
+  #score {
+    font-size: 18px;
+  }
+
   ul {
     height:400px;
     width: 400px;
+  }
+
+  #reset{
+    font-size: 16px;
   }
 }
