--- a/css/app.css
+++ b/css/app.css
@@ -19,7 +19,7 @@ h1 {border-top: 7px solid beige;
   margin-left: 10%;
   margin-right: 10%;
   padding-top: 10px;
-  font-size: 48px;
+  font-size: 56px;
   
   }
 
@@ -59,6 +59,14 @@ ul {
   color:black;
 }
 
+#instructions {
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 16px; 
+  text-align: center;
+}
+
 li {
   background-color: rgba(214, 4, 4, 0.5);
   color:rgba(100, 239, 170, 0.7);
@@ -81,11 +89,11 @@ li {
 
 li:hover{
 /*  background-color:rgba(230, 230, 230, 0.6);*/
-  border: 1px solid rgba(255,239,213,0.7);
+  border: 2px solid rgba(255,239,213,0.7);
   /*border: 3px solid rgba(0,0,0,0.5);*/
   box-sizing: border-box;
   border-radius: 3px;
-  box-shadow: 5px 5px 10px rgba(220,220,220,0.5);   }
+  /*box-shadow: 5px 5px 10px rgba(220,220,220,0.5);  */ }
 
 
 .green {
@@ -102,14 +110,16 @@ li:hover{
   z-index: 100;
 }*/
 
+
+
 @media only screen and (max-width: 640px) {
   
   h1{
-    font-size: 36px;
+    font-size: 46px;
   }
 
   #score {
-    font-size: 18px;
+    font-size: 16px;
   }
 
   ul {
@@ -119,5 +129,9 @@ li:hover{
 
   #reset{
     font-size: 16px;
+  }
+
+  #instructions{
+    font-size:14px;
   }
 }
