--- a/css/app.css
+++ b/css/app.css
@@ -115,6 +115,24 @@ li:hover{
   z-index: -1;
 }*/
 
+.gridSizeSelector{
+  cursor: pointer;
+  display:inline-block;
+}
+
+#welcome{
+  position:absolute;
+  width:80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  top:40%;
+  border: 2px solid beige;
+}
+
+#welcomeMessage{
+  font-size: 18px;
+}
+
 
 @media only screen and (max-width: 640px) {
   
