--- a/css/app.css
+++ b/css/app.css
@@ -51,8 +51,9 @@ ul {
   margin-left: 10%;
   margin-right: 10%;
   padding-top: 5px;
+  margin-top: -30px; 
   padding-bottom: 5px;
-  font-size: 18px;
+  font-size: 20px;
 }
 
 #reset:hover{
@@ -61,12 +62,13 @@ ul {
   cursor: pointer;
 }
 
-#instructions {
+#howtoplaytext {
   width: 80%;
   margin-left: 10%;
   margin-right: 10%;
   font-size: 16px; 
   text-align: center;
+  padding-top: 5px;
 }
 
 li {
@@ -80,12 +82,10 @@ li {
   margin:4px;
   cursor: pointer;
   font-size: 5em;
-  /*the below lines make the text center in middle of li element*/
   text-align: center;
   vertical-align: middle;
   line-height: 100%;       /* the same as your div height */
   box-sizing: border-box;
-  /*background: radial-gradient(rgba(255,255,255,0.5), rgba(214, 4, 4, 0.5));*/
 
 }
 
@@ -100,32 +100,21 @@ li:hover{
 
 .green {
   background-color: rgba(41, 242, 44, 0.6);
-  /*border: 1px solid black;*/
-  /*background: radial-gradient(rgba(255,255,255,0.7), rgba(41, 242, 44, 0.8);*/
 }
 
-/*#test{
-  border 4px dashed beige;
-  height:  700px;
-  width: 700px;
-
-  z-index: 100;
-}*/
-
-
-/*#instructions {
-  z-index: -1;
-}*/
 
 .gridSizeSelector{
   cursor: pointer;
   display:inline-block;
-  font-size:28px;
+  font-size:34px;
 }
 
 .gridSizeSelector:hover {
   background-color: beige;
   color: rgba(0,0,0,0.7);
+  transform: scale(1.2);
+  padding-left: 5px;
+  padding-right: 5px;
 }
 
 #welcome{
@@ -145,8 +134,6 @@ li:hover{
   
 }
 
-
-
 #welcomeMessage{
   font-size: 22px;
 }
@@ -158,19 +145,45 @@ li:hover{
 }
 
 
+#howtoplay{
+  border:2px solid beige;
+  border-right: none;
+  border-left: none;
+  border-bottom: 1px solid beige;
+  width: 80%;
+  margin-left: 10%;
+  margin-right: 10%;
+  padding-top: 5px;
+/*  margin-top: -30px; 
+  padding-bottom: 5px;*/
+  font-size: 20px;
+}
+
+#howtoplay:hover{
+  background-color: beige;
+  color:black;
+  cursor: pointer;
+}
+
+
+#goodLuck{
+  font-size: 24px;
+}
+
 @media only screen and (max-width: 640px) {
   
   h1{
-    font-size: 46px;
+    font-size: 50px;
   }
 
   #score {
     font-size: 16px;
+    margin-bottom: 0px;
   }
 
   ul {
-    height:400px;
-    width: 400px;
+    height:350px;
+    width: 350px;
   }
 
   #reset{
@@ -182,7 +195,7 @@ li:hover{
   }
 
   .gridSizeSelector{
-    font-size:22px;
+    font-size:28px;
   }
   #welcome{
     font-size: 14px;
