--- a/css/app.css
+++ b/css/app.css
@@ -1,7 +1,7 @@
 body{
   text-align: center;
   margin: 0 auto;
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', 'Lato', sans-serif;
 /*  font-family: 'Lato', sans-serif;*/
   color: beige;
   background-color: black;
@@ -90,12 +90,11 @@ li {
 }
 
 li:hover{
-/*  background-color:rgba(230, 230, 230, 0.6);*/
+
   border: 3px solid rgba(255,239,213,0.7);
-  /*border: 3px solid rgba(0,0,0,0.5);*/
   box-sizing: border-box;
   border-radius: 3px;
-  /*box-shadow: 5px 5px 10px rgba(220,220,220,0.5);  */ }
+}
 
 
 .green {
@@ -154,8 +153,6 @@ li:hover{
   margin-left: 10%;
   margin-right: 10%;
   padding-top: 5px;
-/*  margin-top: -30px; 
-  padding-bottom: 5px;*/
   font-size: 20px;
 }
 
@@ -170,7 +167,20 @@ li:hover{
   font-size: 24px;
 }
 
+
+#welcomeMessage{
+  font-weight: bold;
+  color:rgba(255, 238, 220,0.8);
+  font-size:36px;
+}
+
+
+
+
+
+
 @media only screen and (max-width: 640px) {
+  
   
   h1{
     font-size: 50px;
@@ -218,5 +228,6 @@ li:hover{
     font-size:8px;
     margin-top: -40px;
   }
+
 
 }
